<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>turtlebot3_maze_gazebo</name>

  <version>1.0.0</version>

  <description>
    Static Gazebo maze model and spawner for TurtleBot3 maze demonstrations.
  </description>

  <maintainer email="ivan.oroz34@gmail.com">
    Nidhood
  </maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>
    ament_cmake
  </buildtool_depend>

  <exec_depend>
    launch
  </exec_depend>

  <exec_depend>
    launch_ros
  </exec_depend>

  <exec_depend>
    ros_gz_sim
  </exec_depend>

  <export>
    <build_type>
      ament_cmake
    </build_type>
  </export>

</package>
